fixed vine clipping into text

--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -26,7 +26,7 @@
 }
 
 .vine-icon {
-  width: 31px;
+  width: 24px;
 }
 
 .html-web-icon {
